test(bot): expand happy path and negative unit tests across bot lifecycle